Fix overflow

--- a/app/assets/styles/base/_core.scss
+++ b/app/assets/styles/base/_core.scss
@@ -3,14 +3,6 @@
     box-sizing: border-box;
 }
 
-html, body {
-    overflow-x: hidden;
-}
-
-main, section, div:not(.header__headband):not(.header__container) {
-    overflow-x: hidden;
-}
-
 html {
     height: 100%;
     width: 100%;
@@ -22,16 +14,19 @@ body {
     width: 100%;
     min-height: 100svh;
     @extend %flex-column;
+    position: relative;
+    overflow-x: hidden;
 }
 
 main {
-    flex: 1;
     background-color: var(--color-secondary);
+    overflow-x: hidden;
 }
 
 section {
-    min-height: calc(100svh - 8.1rem);
+    min-height: auto;
     padding: 2rem 1.5rem;
+    overflow-x: hidden;
 
     @include respond-to('breakpoint-768') {
         padding: 2.5rem 5rem;
